# TSK

./: CMakeLists.txt  vcpkg.json
lib/: core.h  dopplerRadar.h  eventHandlers.h  mainFrame.h  simController.h  vehicle.h
src/: core.cpp  dopplerRadar.cpp  eventHandlers.cpp  main.cpp  mainFrame.cpp  simController.cpp  vehicle.cpp
tmp/: TODO.txt
